unpackaged/main/default/objects/Expiry_Date__c/Expiry_Date__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Expiry Date</label>
</CustomObject>