unpackaged/main/default/objects/Expiry_Date__c/fields/Alert_Before_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Before_Expiration_Date__c</fullName>
    <description>/*Created By Nupur */
Email Alerts -------number of days before expiration</description>
    <label>Alert Before Expiration Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>