unpackaged/main/default/objects/Expiry_Date__c/fields/Loan_Status_to_deactivate_Yodlee__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status_to_deactivate_Yodlee__c</fullName>
    <label>Loan Status to deactivate Yodlee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>