unpackaged/main/default/objects/Expiry_Date__c/fields/No_of_days_for_Expiration__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_for_Expiration__c</fullName>
    <label>No. of days for Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>