unpackaged/main/default/objects/Expiry_Date__c/fields/Yodlee_Acc_expiration_after__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Acc_expiration_after__c</fullName>
    <label>Yodlee Acc expiration after</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>